--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Werkzeug==2.2.2
 gunicorn==20.1.0
 setuptools==68.2.2
 dnspython>=2.0.0
-gevent==23.9.1
+gevent>=24.2.1
 gevent-websocket==0.10.1
 Flask-SQLAlchemy==3.0.3
 Flask-Login==0.6.2
